--- a/seminar_8_homework.ipynb
+++ b/seminar_8_homework.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4bwMndBKXf+ZwH/HiDGGp",
+      "authorship_tag": "ABX9TyPdr8yit1L+WxWYd5HyjdaC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,8 @@
       "outputs": [],
       "source": [
         "import pandas as pd\n",
+        "\n",
+        "## Работать с файлом california_housing_train.csv, который находится в папке sample_data.\n",
         "\n",
         "df = pd.read_csv('/content/sample_data/california_housing_train.csv')"
       ]
@@ -255,6 +257,8 @@
     {
       "cell_type": "code",
       "source": [
+        "## Определить среднюю стоимость дома, где кол-во людей от 0 до 500 (population).\n",
+        "\n",
         "df[df['population'] < 500]['median_house_value'].mean()"
       ],
       "metadata": {
@@ -281,6 +285,8 @@
     {
       "cell_type": "code",
       "source": [
+        "## Узнать какая максимальная households в зоне минимального значения population.\n",
+        "\n",
         "df[df['population'] == df['population'].min()]['households'].max()"
       ],
       "metadata": {
