--- a/seminar_8_homework.ipynb
+++ b/seminar_8_homework.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPdr8yit1L+WxWYd5HyjdaC",
+      "authorship_tag": "ABX9TyOZJ0GlLwzxmtzlQdJtsaMa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Задание:\n",
+        "\n",
+        " Работать с файлом california_housing_train.csv, который находится в папке\n",
+        "sample_data. \n",
+        "\n",
+        "1) Определить среднюю стоимость дома, где кол-во людей от 0 до 500 (population)\n",
+        "\n",
+        "2) Узнать какая максимальная households в зоне минимального значения population\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "aa4v37i-TD8Q"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -35,8 +52,6 @@
       "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "\n",
-        "## Работать с файлом california_housing_train.csv, который находится в папке sample_data.\n",
         "\n",
         "df = pd.read_csv('/content/sample_data/california_housing_train.csv')"
       ]
@@ -257,8 +272,6 @@
     {
       "cell_type": "code",
       "source": [
-        "## Определить среднюю стоимость дома, где кол-во людей от 0 до 500 (population).\n",
-        "\n",
         "df[df['population'] < 500]['median_house_value'].mean()"
       ],
       "metadata": {
@@ -285,8 +298,6 @@
     {
       "cell_type": "code",
       "source": [
-        "## Узнать какая максимальная households в зоне минимального значения population.\n",
-        "\n",
         "df[df['population'] == df['population'].min()]['households'].max()"
       ],
       "metadata": {
@@ -294,9 +305,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EaVDlOtTFRIo",
-        "outputId": "fee57b6a-7b57-45cf-b308-5a0bd2dd1580"
+        "outputId": "413d2771-c2aa-42bc-c437-c181816c52b8"
       },
-      "execution_count": 16,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -306,9 +317,18 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 22
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dhiQggnlSWiw"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
